integrando o tsyrienge
