# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "RentaX Documentation",
+        "title": "RentX Documentation",
         "description": "This is an API Rent",
         "version": "1.0.0",
         "contact": {
@@ -45,7 +45,7 @@
                 }
             },
             "get": {
-                "tag": ["category"],
+                "tags": ["category"],
                 "summary": "List all categories",
                 "description": "List all categories",
                 "responses": {
@@ -70,6 +70,69 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import" : {
+            "post": {
+                "tags": ["category"],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }    
+                },
+                "response": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "specifications": {
+            "post": {
+                "tags": ["specifications"],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                }, "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "specification already existis"
+                    }
+                }
+            }
+        }
+    }, 
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
                 }
             }
         }
